--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,16 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
+# rgb config
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# power management
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=300000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# bluetooth configuration
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
