--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,6 +8,9 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
+# batter reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
