--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,6 +10,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # batter reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
